# bibcite

./: Readme.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
skills/bibcite/: SKILL.md
src/bibcite/: __init__.py  bibfile.py  cache.py  cli.py  normalize.py  resolve.py  sources.py  venues.py
src/bibcite/data/: strings.bib
tests/: test_bibfile.py  test_bugfixes.py  test_cli_status.py  test_entry_types.py  test_normalize.py  test_round2.py  test_round3.py  test_source_retries.py  test_status_semantics.py  test_strings_override.py  test_venues.py
