[project]
name = "bibcite-cli"
version = "0.6.1"
description = "Resolve papers (arXiv id / DOI / title) to canonical, normalized BibTeX for agents and humans"
readme = "Readme.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4,<2",
    "httpx>=0.27",
]
keywords = ["bibtex", "arxiv", "citations", "dblp", "bibliography"]

[project.urls]
Repository = "https://github.com/leo1oel/bibcite"

[project.scripts]
bibcite = "bibcite.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibcite"]
